# spectrum

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  cmake-build.yml  cmake-multi-platform.yml
src/: AnalyzerFrame.h  AnalyzerFrequencyGridFrame.h  AnalyzerFrequencyGridLabelsFrame.h  AnalyzerGridFrame.h  AnalyzerProcessor.cpp  AnalyzerProcessor.h  FifoBuffer.h  LiveValue.cpp  LiveValue.h  MainFrame.h  MainGuiFrame.h  Plugin.cpp  Plugin.h  PluginEntry.cpp  SettingsFrame.h  Spectrum.cpp  Spectrum.h  SpectrumPlugin.cpp  SpectrumPlugin.h  SpectrumPluginEntry.cpp  SpectrumPluginEntryImpl.cpp
src/analyzer/: AnalyzerProcessor.cpp  AnalyzerProcessor.h
src/plugin/: SpectrumPlugin.cpp  SpectrumPlugin.h  SpectrumPluginEntryImpl.cpp  SpectrumPluginEntryImpl.h
src/plugin/ui/: AnalyzerFrame.h  Common.h  FrequencyGridLabelsFrame.h  GridFrame.h  SettingsFrame.h
src/ui/: AnalyzerDbGridFame.h  AnalyzerFrame.h  AnalyzerFrequencyGridFrame.h  AnalyzerFrequencyGridLabelsFrame.h  DbGridLabelsFrame.h  FrequencyGridLabelsFrame.h  GridFrame.h  LiveValue.cpp  MainFrame.h  SettingsFrame.h
tests/: AnalyzerProcessorTests.cpp
